style(header__sm): fix white space
This commit is to resolve the rendering issue in the header block.

The change will ensure that there will enough space on top of the
header block thereby rendering well on sm devices and window or screen
sizes.

--- a/style.css
+++ b/style.css
@@ -989,9 +989,9 @@ vertical-align: top;
   /* header */
 .header-block {
     grid-area: header;
-    height:33vh;
-    height:33dvh;
-    height:33svh;
+    height:46vh;
+    height:46dvh;
+    height:46svh;
     display: flex;
     flex-direction: column;
     justify-content: center; 
